[package]
name = "pps_auth"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pps_auth"
path = "src/main.rs"

[[bin]]
name = "seed"
path = "src/bin/seed.rs"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "time", "json", "migrate"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
time = { version = "0.3", features = ["serde"] }
jsonwebtoken = "9"
sha2 = "0.10"
base64ct = { version = "1", features = ["alloc"] }
argon2 = "0.5"
rand = "0.8"
oauth2 = "4"
webauthn-rs = { version = "0.5", features = ["danger-allow-state-serialisation"] }
minijinja = { version = "2", features = ["loader"] }
dashmap = "5"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
anyhow = "1"
url = "2"
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
wiremock = "0.6"
